--- a/Shopping-Lists/index.html
+++ b/Shopping-Lists/index.html
@@ -11,18 +11,18 @@
 <body>
   <div class="container">
     <div class="appcontent">
-      <h1 class="title">SHOPPING LIST</h1>
+      <img src="./img/title.png" class="title" alt="SHOPPING LIST"</img>
       <div class="appcontent__input">
         <form id="listForm">
           <input type="text" id="listNameInput" placeholder="Add new list name">
           <button type="submit" class="adding__button">Create List</button>
         </form>
-        <p class="subsubtitle">or choose below</p>
+        <img src="./img/subtitle.png" class="subtitle" alt="or choose below"</img>
         <div class="list-select">
           <select id="listSelect"></select>
           <button id="deleteListButton">Delete List</button>
         </div>
-        <p class="subsubtitle">Add items to list</p>
+        <div class="subsubtitle">Add items to list</div>
         <form id="taskForm">
           <input type="text" id="taskInput" placeholder="New item">
           <button type="submit" class="adding__button">Add item</button>
