working on memory game

--- a/Shopping-Lists/index.html
+++ b/Shopping-Lists/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KIL'KO</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="shortcut icon" href="./img/shorcut-image.svg" type="image/x-icon">
@@ -17,7 +19,7 @@
           <input type="text" id="listNameInput" placeholder="Add new list name">
           <button type="submit" class="adding__button">Create List</button>
         </form>
-        <img src="./img/subtitle.png" class="subtitle" alt="or choose below"</img>
+        <div class="subtitle">or choose below</div>
         <div class="list-select">
           <select id="listSelect"></select>
           <button id="deleteListButton">Delete List</button>
