--- a/Memory-Game-App/lv2-emotions.html
+++ b/Memory-Game-App/lv2-emotions.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life's Essential 8</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Feelings Memo</title>
+    <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
     <h1>Lives : <span class="playerLivesCount"></span></h1>
     <Section></Section>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
