--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JSF projects</title>
+  <title>Ω</title>
 </head>
 <body>
+     <h1>Welcome to My Projects that I've created on JSF course.</h1>
+    <ul>
+        <li><a href=".html">Memory Game</a></li>
+        <li><a href=".html">Shopping List</a></li>
+    </ul>
 </body>
 </html>
