--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      <h1>Welcome to My Projects that I've created on JSF course.</h1>
     <ul>
-        <li><a href=".html">Memory Game</a></li>
+        <li><a href="https://github.com/valeriasekret/JSF-Projects/blob/main/Memory-Game-App/index.html">Memory Game</a></li>
         <li><a href=".html">Shopping List</a></li>
     </ul>
 </body>
