--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ω</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Projects</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
-     <h1>Welcome to My Projects that I've created on JSF course.</h1>
-    <ul>
-        <li><a href="Memory-Game-App/memo.html">Memory Game</a></li>
-        <li><a href=".html">Shopping List</a></li>
-    </ul>
+
+<body class="mainsite">
+  <h1 class="greeting">Welcome to My Projects that I've created on JSF course.</h1>
+  <ul class="mainlist">
+    <li><a href="Memory-Game-App/memo.html">Memory Game</a></li>
+    <li><a href="Shopping-Lists/shoplist.html">Shopping List</a></li>
+  </ul>
 </body>
+
 </html>
