--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
-<body class="mainsite">
-  <h1 class="greeting">Welcome to My Projects that I've created on JSF course.</h1>
+<body>
+  <h1 class="greeting">Sekret Projects</h1>
   <ul class="mainlist">
-    <li><a href="Memory-Game-App/memo.html">Memory Game</a></li>
-    <li><a href="Shopping-Lists/shoplist.html">Shopping List</a></li>
+    <div class="link1">
+      <li><a href="Memory-Game-App/memo.html">MEMO LIFE<br>
+        memory game</a></li>
+    </div>
+    <div class="link2">
+      <li><a href="Shopping-Lists/shoplist.html">KIL'KO APP<br>
+        shopping list</a></li>
+    </div>
   </ul>
 </body>
 
