--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Projects</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
   <h1 class="greeting">Sekret Projects</h1>
-  <ul class="mainlist">
-    <div class="link1">
-      <li><a href="Memory-Game-App/memo.html">MEMO LIFE<br>
-        memory game</a></li>
-    </div>
-    <div class="link2">
-      <li><a href="Shopping-Lists/shoplist.html">KIL'KO APP<br>
-        shopping list</a></li>
-    </div>
-  </ul>
+  <div class="mainlist">
+    <div class="link1"><a href="Memory-Game-App/memo.html">MEMO LIFE<br>
+        memory game</a></div>
+    <div class="link2"><a href="Shopping-Lists/shoplist.html">KIL'KO APP<br>
+        shopping list</a></div>
+  </div>
 </body>
 
 </html>
